# arch_server_notifier_daemon

./: Cargo.toml  README.md
src/: config.rs  main.rs  monitoring.rs
