[package]
name = "arch_update_notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = {version="0.9.1"}
dirs = {version = "6.0.0"}